Fixed a bug in Chapter selector radioButtons due to recursive LoaderCall and optimised some code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="SpecificVerse">Specific Verse</string>
 
     <string name="the_holy_quran">the holy quran</string>
+    <string name="offlineNetwork">No Internet Available</string>
+    <string name="timeout">Connection Timeout</string>
 </resources>
